🐛 Fix spacing

--- a/src/styles/layout/_content.scss
+++ b/src/styles/layout/_content.scss
@@ -1,5 +1,5 @@
 .content {
-  padding: 80px 0;
+  padding: 56px 0;
 
   @include media-breakpoint(lg) {
     padding: 104px 0;
