--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -74,7 +74,7 @@
   }
 
   &-home {
-    padding: 120px 0;
+    padding: 104px 0;
     text-align: center;
 
     @include media-breakpoint(lg) {
